--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -10,12 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/Primary_color"
-        android:padding="14dp"
-        app:elevation="8dp">
+        android:padding="14sp"
+        app:elevation="8sp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/Primary_color"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/tv_category_title"
@@ -23,25 +24,28 @@
                 android:layout_height="wrap_content"
                 android:text="Title:"
                 android:textStyle="bold"
+                android:background="@color/Primary_color"
                 android:fontFamily="@font/sourceserifpro"
                 android:textColor="#ffff"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginHorizontal="12sp"
                 android:textSize="24sp"/>
 
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
-        android:paddingTop="18dp"
+        android:paddingTop="18sp"
         android:layout_alignParentBottom="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="54sp"
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCategoryFurnitureList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="6sp"
+            />
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
