--- a/app/src/main/res/layout/furniture_card_layout.xml
+++ b/app/src/main/res/layout/furniture_card_layout.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="12dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginRight="12dp"
+    android:layout_marginLeft="12sp"
+    android:layout_marginBottom="8sp"
+    android:layout_marginRight="12sp"
     android:foreground="?attr/selectableItemBackground"
     android:backgroundTint="@color/accent_color"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="0.5dp"
-    app:cardUseCompatPadding="true"
-    app:contentPadding="4dp"
+    app:cardCornerRadius="8sp"
+    app:cardElevation="0.5sp"
     android:focusable="true">
 
     <LinearLayout
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/img_view"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginHorizontal="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="150sp"
+
             />
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
+            android:layout_margin="5dp"
             android:fontFamily="@font/sourceserifpro"
             android:gravity="center_horizontal"
             />
