--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,6 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/text_color</item>
-        <item name="android:background">@color/background_color</item>
+<!--        <item name="android:background">@color/background_color</item>-->
     </style>
 </resources>
