--- a/app/src/main/res/layout/furniture_card_layout.xml
+++ b/app/src/main/res/layout/furniture_card_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/furnitureCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="12sp"
-    android:layout_marginBottom="8sp"
+    android:layout_marginBottom="15sp"
     android:layout_marginRight="12sp"
     android:foreground="?attr/selectableItemBackground"
     android:backgroundTint="@color/accent_color"
