added bottom navigation bar

--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -47,5 +47,22 @@
             android:layout_marginHorizontal="6sp"
             />
     </LinearLayout>
+    <nl.joery.animatedbottombar.AnimatedBottomBar
+        android:id="@+id/bottom_bar"
+        android:background="#FFF"
+        android:layout_width="match_parent"
+        android:layout_height="49sp"
+        android:layout_gravity="bottom"
+        app:abb_selectedTabType="text"
+        app:abb_indicatorAppearance="round"
+        app:abb_indicatorColor="@color/Primary_color"
+        app:abb_indicatorMargin="16dp"
+        app:abb_indicatorHeight="4dp"
+        app:abb_tabs="@menu/tabs"
+        app:abb_tabColorSelected="@color/text_color"
+        app:abb_rippleEnabled="true"
+
+
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
