--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,19 +35,6 @@
                     android:textColor="#FFF"
                     android:layout_marginHorizontal="25sp"
                     android:textSize="24sp"/>
-                <Button
-                    android:id="@+id/btn_fav"
-                    android:textColor="@color/text_color"
-                    android:layout_width="120sp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/accent_color"
-                    android:textSize="12sp"
-                    android:text="fav"
-                    android:layout_alignParentRight="true"
-                    android:fontFamily="@font/sourceserifpro"
-                    android:textStyle="bold"
-
-                    />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -75,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_marginBottom="49sp"
         >
         <ScrollView
             android:layout_width="match_parent"
@@ -274,6 +262,26 @@
             </LinearLayout>
         </ScrollView>
     </RelativeLayout>
+
+    <nl.joery.animatedbottombar.AnimatedBottomBar
+        android:id="@+id/bottom_bar"
+        android:background="#FFF"
+        android:layout_width="match_parent"
+        android:layout_height="49sp"
+        android:layout_gravity="bottom"
+        app:abb_selectedTabType="text"
+        app:abb_indicatorAppearance="round"
+        app:abb_indicatorColor="@color/Primary_color"
+        app:abb_indicatorMargin="16dp"
+        app:abb_indicatorHeight="4dp"
+        app:abb_tabs="@menu/tabs"
+        app:abb_selectedIndex="0"
+        app:abb_tabColorSelected="@color/text_color"
+        app:abb_rippleEnabled="true"
+
+
+
+        />
 
 
 
