--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -39,6 +39,16 @@
         android:layout_marginBottom="49sp"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/fav_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="You have no favorites yet...."
+            android:layout_margin="12sp"
+            android:textSize="16sp"
+
+            />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvFavoritesList"
             android:layout_width="match_parent"
